--- a/overlay/frameworks/base/core/res/res/values/arrays.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrays.xml
@@ -23,6 +23,7 @@
     <array name="shutdown_reboot_options" translatable="false">
         <item>@string/reboot_reboot</item>
         <item>@string/reboot_recovery</item>
+        <item>@string/reboot_hotreboot</item>
     </array>
 
     <!-- Do not translate. Defines the shutdown actions passed to the kernel.
@@ -30,5 +31,6 @@
     <string-array name="shutdown_reboot_actions" translatable="false">
         <item></item>
         <item>recovery</item>
+        <item>hot</item>
     </string-array>
 </resources>
