--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
 ** Copyright 2009, The Android Open Source Project
@@ -24,13 +24,11 @@
          config_hardware_automatic_brightness_available is not set, so we will use software implementation -->
     <bool name="config_automatic_brightness_available">true</bool>
 
-    <!-- Flag indicating whether the auto-brightness should be controled
-         by light sensor events or hardware directly -->
-    <bool name="config_automaticSoftwareBrightness">true</bool>
+    <!-- Our amoled doesn't animate well. -->
+    <bool name="config_animateScreenLights">false</bool>
 
+    <!-- disable menu hard key on Bravo in non-pattern lockscreen -->
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
-
-    <integer name="config_lightSensorWarmupTime">250</integer>
 
     <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
          The N entries of this array define N + 1 zones as follows:
@@ -43,10 +41,15 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>200</item>
-        <item>400</item>
-        <item>1000</item>
-        <item>3000</item>
+        <item>160</item>
+        <item>225</item>
+        <item>320</item>
+        <item>640</item>
+        <item>1280</item>
+        <item>2600</item>
+        <item>5800</item>
+        <item>8000</item>
+        <item>10240</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -55,10 +58,15 @@
     -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
         <item>35</item>
+        <item>40</item>
         <item>55</item>
-        <item>70</item>
+        <item>65</item>
+        <item>80</item>
         <item>90</item>
-        <item>210</item>
+        <item>120</item>
+        <item>160</item>
+        <item>200</item>
+        <item>255</item>
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
@@ -71,25 +79,45 @@
         <item>0</item>
         <item>0</item>
         <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
 
     <!-- Array of output values for keyboard backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
          than the size of the config_autoBrightnessLevels array.
+         Bravo has no keyboard so all values are zero.
     -->
     <integer-array name="config_autoBrightnessKeyboardBacklightValues">
-        <item>5</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
     </integer-array>
+    
+    <integer name="config_deskDockKeepsScreenOn">0</integer>
+    <integer name="config_carDockKeepsScreenOn">1</integer>
+
+    <!-- Default color for notification LED is green -->
+    <color name="config_defaultNotificationColor">#ff00ff00</color>
+
+    <!-- Component name of the service providing network location support. -->
+    <string name="default_wallpaper_component">com.android.wallpaper/.nexus.NexusWallpaper</string>
 
     <integer name="config_deskDockKeepsScreenOn">0</integer>
     <integer name="config_carDockKeepsScreenOn">1</integer>
 
     <!-- Default blink frequency for notification LED is 9 seconds. -->
-    <integer name="config_defaultNotificationLedOff">9000</integer>
+    <integer name="config_defaultNotificationLedOff">5000</integer>
 
     <!-- Component name of the service providing network location support. -->
     <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
@@ -119,70 +147,43 @@
          USB interfaces.  If the device doesn't want to support tething over USB this should
          be empty.  An example would be "usb.*" -->
     <string-array translatable="false" name="config_tether_usb_regexs">
-        <item>"usb\\d"</item>
+        <item>"usb0"</item>
     </string-array>
 
     <!-- Regex array of allowable upstream ifaces for tethering - for example if you want
          tethering on a new interface called "foo2" add <item>"foo\\d"</item> to the array -->
     <string-array translatable="false" name="config_tether_upstream_regexs">
         <item>"rmnet\\d"</item>
-        <item>"wlan\\d"</item>
-    </string-array>
-
-    <string-array translatable="false" name="config_tether_bt_regexs">
-        <item>"bnep\\d"</item>
+        <item>"eth\\d"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
          Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
          should be empty.  An example would be "softap.*" -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"athap0"</item>
+        <item>"wl0.1"</item>
     </string-array>
 
 
     <!-- Boolean indicating if we require the use of DUN on mobile for tethering -->
     <bool translatable="false" name="config_tether_dun_required">false</bool>
 
-        <!-- Specifies the amount of time to disable virtual keys after the screen is touched
-         in order to filter out accidental virtual key presses due to swiping gestures
-         or taps near the edge of the display.  May be 0 to disable the feature.
-         It is recommended that this value be no more than 250 ms.
-         This feature should be disabled for most devices. -->
-    <integer name="config_virtualKeyQuietTimeMillis">200</integer>
-
     <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
     <integer-array name="config_keyboardTapVibePattern">
-        <item>30</item>
+        <item>40</item>
     </integer-array>
 
-    <bool name="cm_default_is_tablet">true</bool>
-
     <bool name="cm_default_has_soft_buttons">true</bool>
-
-    <bool name="cm_default_bottom_status_bar">false</bool>
-
-    <bool name="cm_default_use_dead_zone">false</bool>
-
+    <!-- if true, soft buttons shown on left, false show them on
+    right side of status bar -->
     <bool name="cm_default_soft_buttons_left">false</bool>
 
+    <!-- toggle which buttons to show if soft buttons enabled
+    quickna: opens notification area with the press of one button
+    instead of swiping the long way up/down on big tablets -->
     <bool name="cm_default_show_soft_home">false</bool>
     <bool name="cm_default_show_soft_menu">false</bool>
     <bool name="cm_default_show_soft_back">false</bool>
     <bool name="cm_default_show_soft_search">false</bool>
     <bool name="cm_default_show_soft_quick_na">false</bool>
-
-    <bool name="cm_default_disable_lockscreen">false</bool>
-
-    <bool name="cm_default_disable_fullscreen">false</bool>
-
-    <integer name="cm_default_unhide_button_index">0</integer>
-
-    <bool name="cm_default_extend_power_menu">true</bool>
-
-    <bool name="cm_default_power_menu_home">true</bool>
-    <bool name="cm_default_power_menu_menu">true</bool>
-    <bool name="cm_default_power_menu_back">true</bool>
-
-    <bool name="cm_default_reverse_volume_behavior">false</bool>
 </resources>
